Workshop/petclinic/petclinic-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev

---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: petclinic-pod
  ports:
    - name: petsvcport
      port: 8080
      targetPort: petwebport
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deploy
  namespace: dev
spec:
  minReadySeconds: 2
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-pod
  template:
    metadata:
      name: petclinic-pod
      labels:
        app: petclinic-pod
    spec:
      containers:
        - name: petclinic-container
          image: panneercts/springpetclinic:v1.0
          ports:
            - name: petwebport
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 256m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /
              port: petwebport
            failureThreshold: 3
            periodSeconds: 3
            successThreshold: 1
            initialDelaySeconds: 90
          readinessProbe:
            httpGet:
              path: /
              port: petwebport
            failureThreshold: 3
            periodSeconds: 3
            successThreshold: 1
            initialDelaySeconds: 90
