Workshop/petclinic/petclinic-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spc-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /petclinic(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: petclinic-svc
                port:
                  number: 80
